[AutofillAi - M4] Show text attributes.
This CL renders STRING, NAME and STATE attributes in the
entity editor. The COUNTRY and DATE data types will be implemented
separately.

Screenshot: screen/7nb6P6YrJcMRD4s

Bug: 476755159
Change-Id: I9be9d71abef1cac627e8fb5a33f03a15442d2af4
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7560180
Reviewed-by: Friedrich Hauser <friedrichh@chromium.org>
Commit-Queue: Timofey Chudakov <tchudakov@google.com>
Cr-Commit-Position: refs/heads/main@{#1583093}